Next release:

	* Removed sysex length limit set in the internal MIDI player and converter.

2013-03-24:

	1.0.2 released.

	* Updated mt32emu library to version 1.2.0.

2013-02-11:

	1.0.1 released.

	* Updated mt32emu library to version 1.1.1.

2012-12-25:

	1.0.0 released.

	* Initial release.